# FinSentinel

./: README.md  tailwind.config.ts
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx  Toast.tsx
frontend/src/components/dashboard/: NotificationDropdown.tsx  RiskAnalysisCard.tsx  Sidebar.tsx  StatsCards.tsx  TopNav.tsx  TransactionTable.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts  mockData.ts  types.ts
frontend/src/pages/: Index.tsx  Login.tsx  Signup.tsx
models/: main.ipynb  pyproject.toml  requirements.txt  upi_fraud_risk_model.pkl
pathway-setup/: .gitignore  app.py  features.py  main.py  pathway_output.jsonl  pipeline.py  pyproject.toml  requirements.txt  schema.py  simulate_transactions.sh  transactions.csv
server/: .gitignore  pyproject.toml  requirements.txt
server/app/: config.py  csv_writer.py  deps.py  main.py  ml.py  rag.py  routes.py  schemas.py  security.py  services.py
server/prisma/: schema.prisma
server/prisma/migrations/20260103103742_first/: migration.sql
server/rag_ingest/: ingest.py
server/rag_ingest/documents/: fraud_patterns.txt  fraud_rules.txt  rag_prompt.txt
src/: App.tsx
src/components/dashboard/: Sidebar.tsx  TopNav.tsx
src/components/landing/: CTA.tsx  Footer.tsx  Navbar.tsx  Stats.tsx
src/components/ui/: button.tsx
src/lib/: api.ts  mockData.ts  types.ts
src/pages/: Login.tsx  Signup.tsx
src/pages/dashboard/: LiveStream.tsx  NewTransaction.tsx  RiskResults.tsx
(+11 files in other folders)
